Use sklearn pipelines in baseline

--- a/ashrae/ashrae-baseline.ipynb
+++ b/ashrae/ashrae-baseline.ipynb
@@ -38,7 +38,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "source": "from datetime import datetime, date\n\nimport pandas as pd\nimport numpy as np\nfrom sklearn.linear_model import Ridge, Lasso\nfrom tqdm import tqdm",
+            "source": "from datetime import datetime, date\n\nimport pandas as pd\nimport numpy as np\nfrom tqdm import tqdm\n\nfrom sklearn.compose import ColumnTransformer, TransformedTargetRegressor\nfrom sklearn.linear_model import Ridge, Lasso\nfrom sklearn.preprocessing import OneHotEncoder\nfrom sklearn.pipeline import Pipeline",
             "metadata": {
                 "trusted": true
             },
@@ -86,7 +86,7 @@
         },
         {
             "cell_type": "code",
-            "source": "train_df = kbtu_to_kwh(train_df)\ntrain_df = get_meter_id_dummies(train_df)\ntrain_df = temporal_features(train_df)\ntrain_df = target_transform(train_df)",
+            "source": "train_df = kbtu_to_kwh(train_df)\n# train_df = get_meter_id_dummies(train_df)\ntrain_df = temporal_features(train_df)\n# train_df = target_transform(train_df)",
             "metadata": {
                 "trusted": true
             },
@@ -108,7 +108,7 @@
         },
         {
             "cell_type": "code",
-            "source": "LABEL = \"log_reading\"\nFEATURES = [\n    \"meter_id_0\",\n    \"meter_id_1\",\n    \"meter_id_2\",\n    \"meter_id_3\",\n    \"hour_sin\",\n    \"hour_cos\",\n    \"day_of_week_sin\",\n    \"day_of_week_cos\",\n    \"month_sin\",\n    \"month_cos\",\n    \"is_weekend\"\n]",
+            "source": "LABEL = \"meter_reading\"\nFEATURES = [\n    \"meter_id\",\n    \"hour_sin\",\n    \"hour_cos\",\n    \"day_of_week_sin\",\n    \"day_of_week_cos\",\n    \"month_sin\",\n    \"month_cos\",\n    \"is_weekend\"\n]",
             "metadata": {
                 "trusted": true
             },
@@ -117,7 +117,16 @@
         },
         {
             "cell_type": "code",
-            "source": "building_ids = list(train_df[\"building_id\"].unique())\nmodels_by_building = {}\nfor building_id in tqdm(building_ids):\n    building_df = train_df[train_df[\"building_id\"] == building_id]\n    X, y = building_df[FEATURES], building_df[LABEL]\n    model = Ridge()\n    model = model.fit(np.array(X), np.array(y))\n    models_by_building[building_id] = model",
+            "source": "# Construct pipeline\n\ndef get_transformer():\n    transformer = ColumnTransformer(\n        [(\"oh_encoder\", OneHotEncoder(), [\"meter_id\"])],\n        remainder=\"passthrough\",\n        verbose_feature_names_out=False,\n    )\n    return transformer\n\n\ndef get_regressor():\n    regressor = TransformedTargetRegressor(\n        regressor=Ridge(),\n        func=np.log1p,\n        inverse_func=np.expm1,\n    )\n    return regressor\n\n\ndef make_pipeline():\n    pipeline = Pipeline(\n        steps = [\n            (\"transformer\", get_transformer()),\n            (\"regressor\", get_regressor())\n        ]\n    )\n    return pipeline",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "# Train pipeline for each building\n\nbuilding_ids = list(train_df[\"building_id\"].unique())\nmodels_by_building = {}\nfor building_id in tqdm(building_ids):\n    building_df = train_df[train_df[\"building_id\"] == building_id]\n    X, y = building_df[FEATURES], building_df[LABEL]\n    \n    model = make_pipeline()\n    model = model.fit(X, y)\n    \n    models_by_building[building_id] = model",
             "metadata": {
                 "trusted": true
             },
@@ -149,7 +158,7 @@
         },
         {
             "cell_type": "code",
-            "source": "test_df = get_meter_id_dummies(test_df)\ntest_df = temporal_features(test_df)",
+            "source": "# test_df = get_meter_id_dummies(test_df)\ntest_df = temporal_features(test_df)",
             "metadata": {
                 "trusted": true
             },
@@ -158,7 +167,7 @@
         },
         {
             "cell_type": "code",
-            "source": "test_building_ids = list(test_df[\"building_id\"].unique())\n\ny_hat_dfs = []\nfor test_building_id in tqdm(test_building_ids):\n    model = models_by_building[test_building_id]\n    building_df = test_df[test_df[\"building_id\"] == test_building_id].copy()\n    X_test = np.array(building_df[FEATURES])\n    y_hat = model.predict(X_test)\n    y_hat = np.clip(y_hat, a_min=0, a_max=None)\n    building_df[\"meter_reading\"] = np.expm1(y_hat)\n    y_hat_df = building_df[[\"row_id\", \"building_id\", \"meter_id\", \"timestamp\", \"meter_reading\"]].copy()\n    y_hat_dfs.append(y_hat_df)\n    ",
+            "source": "test_building_ids = list(test_df[\"building_id\"].unique())\n\ny_hat_dfs = []\nfor test_building_id in tqdm(test_building_ids):\n    model = models_by_building[test_building_id]\n    building_df = test_df[test_df[\"building_id\"] == test_building_id].copy()\n\n    y_hat = model.predict(building_df[FEATURES])\n    y_hat = np.clip(y_hat, a_min=0, a_max=None)\n    \n    building_df[\"meter_reading\"] = y_hat\n    y_hat_df = building_df[[\"row_id\", \"building_id\", \"meter_id\", \"timestamp\", \"meter_reading\"]].copy()\n    y_hat_dfs.append(y_hat_df)\n    ",
             "metadata": {
                 "trusted": true
             },
